# LBG_IA_MMORPG

./: .gitignore  Detail du projet_v3_20260409.txt  Lyra 20260409.txt  bootstrap.md  bourg_illustrated.meta.json  get_houses_coords.py  plan MMMORPG.md
LBG_IA_MMO/agents/: README.md  pyproject.toml
LBG_IA_MMO/agents/tests/: conftest.py  test_combat_http_app.py  test_desktop_mail_imap.py  test_desktop_open_url.py  test_desktop_search_web.py  test_devops_executor.py  test_dialogue_http_app.py  test_dialogue_llm.py  test_dispatch_combat.py  test_dispatch_dialogue.py  test_dispatch_lyra.py  test_dispatch_pm.py  test_dispatch_quests.py  test_lyra_bridge.py  test_lyra_bridge_mmo_world.py  test_lyra_engagement_prompt.py  test_opengame_executor.py  test_quests_http_app.py  test_world_content.py
LBG_IA_MMO/backend/: README.md  main.py  pyproject.toml
LBG_IA_MMO/backend/api/: health.py
LBG_IA_MMO/backend/lbg_ia_mmo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
LBG_IA_MMO/backend/models/: intents.py
LBG_IA_MMO/backend/services/: brain_lyra_sync.py  lyra_regulator.py  metrics.py  mmmorpg_commit.py  mmo_lyra_sync.py  orchestrator_client.py
LBG_IA_MMO/backend/tests/: test_brain_lyra_sync.py  test_cors.py  test_health.py  test_lyra_regulator.py  test_metrics_endpoint.py  test_mmo_lyra_sync.py  test_pilot_action_proposal.py  test_pilot_aid.py  test_pilot_capabilities.py  test_pilot_lbg_ia_status.py  test_pilot_player_inventory.py  test_pilot_proxy_agent_healthz.py  test_pilot_reputation.py  test_pilot_route_commit.py  test_pilot_route_devops_trace.py  test_pilot_route_internal_auth_rl.py  test_pilot_route_mmo_lyra_chain.py  test_pilot_route_timed.py  test_pilot_status.py  test_pilot_status_combat.py  test_pilot_status_dialogue.py  test_pilot_status_quests.py
LBG_IA_MMO/mmmorpg_server/: README.md  __init__.py  pyproject.toml
LBG_IA_MMO/mmmorpg_server/src/: config.py  game_state.py  main.py  protocol.py
LBG_IA_MMO/mmmorpg_server/tests/: conftest.py  test_config.py  test_guard_patrol.py  test_ia_context_sanitize.py  test_internal_http.py  test_npc_conversation_pause.py  test_persistence.py  test_player_inventory.py  test_time_manager.py  test_village_tile_grid.py  test_ws_combat.py  test_ws_inbound.py  test_ws_integration.py  test_ws_quests.py  test_ws_trade.py  test_ws_world_commit.py
LBG_IA_MMO/mmmorpg_server/tools/: ws_ia_cli.py  ws_world_commit_smoke.py
LBG_IA_MMO/mmo_server/: .gitignore  README.md  http_app.py  main.py  pyproject.toml
LBG_IA_MMO/mmo_server/entities/: event.py  location.py  npc.py
LBG_IA_MMO/mmo_server/lbg_ia_mmo_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LBG_IA_MMO/mmo_server/lyra_engine/: gauges.py
LBG_IA_MMO/mmo_server/simulation/: events.py  loop.py  social.py
LBG_IA_MMO/mmo_server/tests/: conftest.py  test_gauges.py  test_http_lyra.py  test_internal_aid.py  test_persistence.py  test_seed.py  test_social_engine.py  test_village_grid.py  test_watabou_import.py
LBG_IA_MMO/mmo_server/world/: persistence.py  seed.py  state.py  village_grid.py
LBG_IA_MMO/orchestrator/: README.md  main.py  pyproject.toml  shared_registry.py
LBG_IA_MMO/orchestrator/api/: health.py
LBG_IA_MMO/orchestrator/capabilities/: spec.py
LBG_IA_MMO/orchestrator/introspection/: deterministic_classifier.py  llm_intent_classifier.py
LBG_IA_MMO/orchestrator/lbg_ia_mmo_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LBG_IA_MMO/orchestrator/registry/: in_memory.py
LBG_IA_MMO/orchestrator/router/: v1.py
LBG_IA_MMO/orchestrator/services/: __init__.py  action_policy.py  action_proposal.py  brain.py  metrics.py
(+286 files in other folders)
