[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lbg-ia-mmo-agents"
version = "0.2.0"
description = "Minimal agent stubs for LBG_IA_MMO orchestrator"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.26",
]

[project.optional-dependencies]
dialogue_http_service = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]
quests_http_service = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]
combat_http_service = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]
pm_http_service = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
