[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lbg-mmmorpg-server"
version = "0.1.0"
description = "Serveur WebSocket MMO (port depuis le dépôt source mmmorpg — ne pas modifier l’upstream)"
requires-python = ">=3.10"
dependencies = [
  "websockets>=12.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
# python -m mmmorpg_server reste le point d’entrée via __main__

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
