[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lbg-ia-mmo-orchestrator"
version = "0.1.0"
description = "Multi-agent orchestrator for LBG_IA_MMO"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["api*", "router*", "introspection*", "registry*", "capabilities*", "services*"]
exclude = ["tests*"]

